--- a/JobBoard.UI.MVC/Views/Account/DisplayEmail.cshtml
+++ b/JobBoard.UI.MVC/Views/Account/DisplayEmail.cshtml
@@ -1,10 +1,16 @@
 ﻿@{
-    ViewBag.Title = "DEMO purpose Email Link";
+    ViewBag.Title = "Email Link";
 }
 <h2>@ViewBag.Title.</h2>
-<p class="text-info">
+@*<p class="text-info">
     Please check your email and confirm your email address.
-</p>
-<p class="text-danger">
+</p>*@
+<h2>
+    Please check your email and confirm your email address.
+</h2>
+@*<p class="text-danger">
     You can click this link to confirm the email: <a href="@ViewBag.Link">link</a>
-</p>
+</p>*@
+<h2>
+    You can click this link to confirm the email: <a href="@ViewBag.Link">link</a>
+</h2>
