--- a/JobBoard.UI.MVC/Views/Applications/Edit.cshtml
+++ b/JobBoard.UI.MVC/Views/Applications/Edit.cshtml
@@ -5,7 +5,7 @@
 
 }
 
-<h2>Edit</h2>
+<h2 style="text-align:center; margin-bottom:2em">Edit this application</h2>
 
 
 @using (Html.BeginForm())
@@ -13,8 +13,7 @@
     @Html.AntiForgeryToken()
     
     <div class="form-horizontal">
-        <h4>Application</h4>
-        <hr />
+        
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         @Html.HiddenFor(model => model.ApplicationID)
 
@@ -51,11 +50,11 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.Status.StatusName, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.StatusID, "Status", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 <div class="checkbox">
-                    @Html.EditorFor(model => model.Status.StatusName, new { @class = "form-control" })
-                    @Html.ValidationMessageFor(model => model.Status.StatusName, "", new { @class = "text-danger" })
+                    @Html.DropDownList("StatusID", null, htmlAttributes: new { @class = "form-control" })
+                    @Html.ValidationMessageFor(model => model.StatusID, "", new { @class = "text-danger" })
                 </div>
             </div>
         </div>
