--- a/JobBoard.UI.MVC/Views/Applications/Index.cshtml
+++ b/JobBoard.UI.MVC/Views/Applications/Index.cshtml
@@ -2,6 +2,7 @@
 
 @{
     ViewBag.Title = "Applications";
+    
 }
 
 <h2 style="margin-bottom:1em; margin-top:1em; text-align:center">Applications</h2>
@@ -46,7 +47,8 @@
             @if (User.IsInRole("Manager") || User.IsInRole("Admin"))
             {
                 <td>
-                    @Html.TextAreaFor(modelItem => item.ManagerNotes, new { @style = "width:100%; height:7em" })
+                    @*@Html.TextAreaFor(modelItem => item.ManagerNotes, new { @style = "width:100%; height:7em" })*@
+                    @Html.DisplayFor(modelItem => item.ManagerNotes)
                 </td>
             }
             
