--- a/JobBoard.UI.MVC/Views/OpenPositions/Index.cshtml
+++ b/JobBoard.UI.MVC/Views/OpenPositions/Index.cshtml
@@ -158,26 +158,21 @@
         </table>
         
     </div>
-
-    <div class="col-md-offset-12" style="padding-left:1em">
+    @*<div class="col-md-offset-12" style="padding-left:1em">
 
         <img src="~/Content/images/downsizing-i-have-no-problem-with-that-i-have-been-recommending-downsizing-since-i-got-here-i-even-b.jpg" />
-    </div>
+    </div>*@
+    
 </div>
 
 @section Script{
 
 
     <script>
-        $(function () {
-            $("#tabs").tabs().addClass("ui-tabs-vertical ui-helper-clearfix");
-            $("#tabs li").removeClass("ui-corner-top").addClass("ui-corner-left");
-        });
-    </script>
-<script>
-        $(document).ready(function () {
-            $('.myTable').DataTable();
-        });
+  $( function() {
+    $( "#tabs" ).tabs();
+  } );
 </script>
+
 }
 
