--- a/JobBoard.UI.MVC/Content/css/CustomCSS.css
+++ b/JobBoard.UI.MVC/Content/css/CustomCSS.css
@@ -12,9 +12,10 @@ div.footer_top_agileits{
 .text-left{
     text-align:left;
 }
-#margins{
+.myMargins{
     margin-top:1em;
     margin-bottom:1em;
+    text-align:center;
 }
 .myWidth{
     width:100%;
