Revert "deletable commit"
This reverts commit 3cefe6c92ffc1636c219662c6a1eb4704a6322e5.

--- a/JobBoard.UI.MVC/Content/css/CustomCSS.css
+++ b/JobBoard.UI.MVC/Content/css/CustomCSS.css
@@ -12,10 +12,9 @@ div.footer_top_agileits{
 .text-left{
     text-align:left;
 }
-.myMargins{
+#margins{
     margin-top:1em;
     margin-bottom:1em;
-    text-align:center;
 }
 .myWidth{
     width:100%;
