--- a/JobBoard.UI.MVC/Views/Messages/Index.cshtml
+++ b/JobBoard.UI.MVC/Views/Messages/Index.cshtml
@@ -4,11 +4,64 @@
     ViewBag.Title = "Index";
 }
 
-<h2>Messages</h2>
+<h2>Inbox</h2>
 
 <p>
     @Html.ActionLink("Compose", "Create")
 </p>
+@*<table class="table">
+        <tr>
+            <th>
+                @Html.DisplayNameFor(model => model.Subject)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Body)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Attachment)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.IsRead)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.AspNetUser.FirstName)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.AspNetUser1.LastName)
+            </th>
+            <th></th>
+        </tr>
+
+        @foreach (var item in Model)
+        {
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Subject)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Body)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Attachment)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.IsRead)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.AspNetUser.FirstName)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.AspNetUser1.LastName)
+                </td>
+                <td>
+                    @Html.ActionLink("Edit", "Edit", new { id = item.MessageID }) |
+                    @Html.ActionLink("Details", "Details", new { id = item.MessageID }) |
+                    @Html.ActionLink("Delete", "Delete", new { id = item.MessageID })
+                </td>
+            </tr>
+        }
+
+    </table>*@
 <div id="tabs">
     <ul>
         <li><a href="#tabs-1">Inbox</a></li>
@@ -35,27 +88,24 @@
 
             @foreach (var item in Model.Where(m => m.AspNetUser.Id == m.Recipient))
             {
-                
-                    string parameterValue = item.AspNetUser.FirstName + " " + item.AspNetUser.LastName;
-                
-                    <tr>
-                        <td>
-                            @Html.DisplayFor(modelItem => parameterValue)
-                        </td>
-                        <td>
-                            @Html.DisplayFor(modelItem => item.Subject)
-                        </td>
-                        <td>
+                <tr>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.AspNetUser.FirstName + " " + item.AspNetUser.LastName)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Subject)
+                    </td>
+                    <td>
 
-                            @Html.ActionLink("Details", "Details", new { id = item.MessageID }, new { @class = "btn btn-default" })<br />
+                        @Html.ActionLink("Details", "Details", new { id = item.MessageID }, new { @class = "btn btn-default" })<br />
 
 
-                            @Html.ActionLink("Delete", "Delete", new { id = item.MessageID }, new { @class = "btn btn-default" })
+                        @Html.ActionLink("Delete", "Delete", new { id = item.MessageID }, new { @class = "btn btn-default" })
 
 
-                        </td>
-                    </tr>
-                    }
+                    </td>
+                </tr>
+            }
 
 
         </table>
@@ -66,35 +116,32 @@
             <tr>
 
                 <th> Recipient</th>
+            
+            <th>
+                @Html.DisplayNameFor(model => model.Subject)
+            </th>
 
-                <th>
-                    @Html.DisplayNameFor(model => model.Subject)
-                </th>
-
-                <th></th>
+            <th></th>
             </tr>
 
             @foreach (var item in Model.Where(m => m.AspNetUser.Id == m.Sender))
             {
-                
-                    string parameterValue = item.AspNetUser.FirstName + " " + item.AspNetUser.LastName;
-                
-                    <tr>
-                        <td>
-                            @Html.DisplayFor(modelItem => parameterValue)
-                        </td>
-                        <td>
-                            @Html.DisplayFor(modelItem => item.Subject)
-                        </td>
-                        <td>
-                            @Html.ActionLink("Details", "Details", new { id = item.MessageID }, new { @class = "btn btn-default" })<br />
+                <tr>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.AspNetUser1.FirstName + " " + item.AspNetUser1.LastName)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Subject)
+                    </td>
+                    <td>
+                        @Html.ActionLink("Details", "Details", new { id = item.MessageID }, new { @class = "btn btn-default" })<br />
 
-                            @Html.ActionLink("Delete", "Delete", new { id = item.MessageID }, new { @class = "btn btn-default" })
-                            <br />
+                        @Html.ActionLink("Delete", "Delete", new { id = item.MessageID }, new { @class = "btn btn-default" })
+                        <br />
 
-                        </td>
-                    </tr>
-                    }
+                    </td>
+                </tr>
+            }
 
         </table>
 
